src/test/ui/mut/mut-cross-borrowing.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/mut-cross-borrowing.rs:7:5
   |
LL |     f(x)
   |     ^^-^
   |       |
   |       expected `&mut isize`, found `Box<{integer}>`
   |
note: function defined here
  --> $DIR/mut-cross-borrowing.rs:3:4
   |
LL | fn f(_: &mut isize) {}
   |    ^ -------------
help: provide an argument of the correct type
   |
LL |     f({&mut isize})
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
